# name: test_geometry[atreus_42-case_outer]
  <class 'list'> [
    <class 'tuple'> (
      -6.222793739514804,
      -14.647761228459936,
    ),
    <class 'tuple'> (
      7.0078869702053215,
      -14.647761228459936,
    ),
    <class 'tuple'> (
      128.88305633917724,
      9.888399245360908,
    ),
    <class 'tuple'> (
      110.60063450006471,
      113.57316584010168,
    ),
    <class 'tuple'> (
      -6.222793739514804,
      113.57316584010168,
    ),
  ]
---
# name: test_geometry[atreus_42-mirror_base_point]
  <class 'tuple'> (
    -5.722793739514804,
    32.4118317605694,
  )
---
# name: test_geometry[atreus_42-reset_button]
  <class 'tuple'> (
    -30,
    101,
  )
---
# name: test_geometry[atreus_42-screws]
  <class 'list'> [
    <class 'tuple'> (
      5.5,
      104.52153575070832,
    ),
    <class 'tuple'> (
      104.26261487838565,
      104.52153575070832,
    ),
    <class 'tuple'> (
      119.83142624978389,
      16.22641886703997,
    ),
    <class 'tuple'> (
      13.345906591884383,
      -5.5961311390665776,
    ),
  ]
---
# name: test_geometry[atreus_42-spacer]
  <class 'list'> [
    <class 'tuple'> (
      -6.222793739514804,
      -14.647761228459936,
    ),
    <class 'tuple'> (
      -6.222793739514804,
      1.7352796573198983,
    ),
    <class 'tuple'> (
      18.479415697226244,
      1.7352796573198983,
    ),
    <class 'tuple'> (
      112.50001545339741,
      21.359927972381836,
    ),
    <class 'tuple'> (
      99.12910577304379,
      97.19012495432185,
    ),
    <class 'tuple'> (
      -4.222793739514804,
      97.19012495432185,
    ),
    <class 'tuple'> (
      -4.222793739514804,
      113.57316584010168,
    ),
    <class 'tuple'> (
      110.60063450006471,
      113.57316584010168,
    ),
    <class 'tuple'> (
      128.88305633917724,
      9.888399245360908,
    ),
    <class 'tuple'> (
      7.0078869702053215,
      -14.647761228459936,
    ),
  ]
---
# name: test_geometry[atreus_42-spacer_thickness]
  3
---
# name: test_geometry[atreus_42-switch_cutouts]
  <class 'list'> [
    <class 'list'> [
      <class 'tuple'> (
        0.5640568218244653,
        11.284382566261803,
      ),
      <class 'tuple'> (
        14.321821131405011,
        13.71024760826882,
      ),
      <class 'tuple'> (
        11.895956089397995,
        27.468011917849363,
      ),
      <class 'tuple'> (
        -1.8618082201825512,
        25.042146875842345,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        20.925061816892256,
        5.228024288317501,
      ),
      <class 'tuple'> (
        34.682826126472804,
        7.6538893303245175,
      ),
      <class 'tuple'> (
        32.256961084465786,
        21.41165363990506,
      ),
      <class 'tuple'> (
        18.499196774885238,
        18.985788597898047,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        17.625746441220578,
        23.939371595549456,
      ),
      <class 'tuple'> (
        31.383510750801126,
        26.36523663755647,
      ),
      <class 'tuple'> (
        28.95764570879411,
        40.123000947137015,
      ),
      <class 'tuple'> (
        15.199881399213563,
        37.69713590513,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        14.326431065548903,
        42.650718902781406,
      ),
      <class 'tuple'> (
        28.08419537512945,
        45.076583944788425,
      ),
      <class 'tuple'> (
        25.658330333122436,
        58.83434825436897,
      ),
      <class 'tuple'> (
        11.900566023541886,
        56.40848321236195,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        11.027115689877226,
        61.36206621001336,
      ),
      <class 'tuple'> (
        24.78487999945777,
        63.78793125202038,
      ),
      <class 'tuple'> (
        22.359014957450757,
        77.54569556160092,
      ),
      <class 'tuple'> (
        8.60125064787021,
        75.1198305195939,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        38.76816823578956,
        13.451378429050216,
      ),
      <class 'tuple'> (
        52.525932545370104,
        15.877243471057234,
      ),
      <class 'tuple'> (
        50.100067503363086,
        29.63500778063778,
      ),
      <class 'tuple'> (
        36.34230319378254,
        27.209142738630764,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        35.468852860117885,
        32.16272573628217,
      ),
      <class 'tuple'> (
        49.22661716969843,
        34.58859077828919,
      ),
      <class 'tuple'> (
        46.80075212769141,
        48.34635508786973,
      ),
      <class 'tuple'> (
        33.042987818110866,
        45.920490045862714,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        32.16953748444621,
        50.87407304351412,
      ),
      <class 'tuple'> (
        45.927301794026754,
        53.29993808552114,
      ),
      <class 'tuple'> (
        43.501436752019735,
        67.05770239510169,
      ),
      <class 'tuple'> (
        29.74367244243919,
        64.63183735309467,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        28.870222108774534,
        69.58542035074608,
      ),
      <class 'tuple'> (
        42.62798641835508,
        72.0112853927531,
      ),
      <class 'tuple'> (
        40.20212137634806,
        85.76904970233363,
      ),
      <class 'tuple'> (
        26.444357066767516,
        83.34318466032661,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        56.437626477019926,
        22.659540322795145,
      ),
      <class 'tuple'> (
        70.19539078660047,
        25.08540536480216,
      ),
      <class 'tuple'> (
        67.76952574459347,
        38.84316967438271,
      ),
      <class 'tuple'> (
        54.01176143501291,
        36.41730463237569,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        53.13831110134825,
        41.3708876300271,
      ),
      <class 'tuple'> (
        66.8960754109288,
        43.79675267203412,
      ),
      <class 'tuple'> (
        64.47021036892178,
        57.554516981614654,
      ),
      <class 'tuple'> (
        50.71244605934123,
        55.128651939607636,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        49.83899572567657,
        60.082234937259045,
      ),
      <class 'tuple'> (
        63.59676003525712,
        62.50809997926606,
      ),
      <class 'tuple'> (
        61.17089499325011,
        76.26586428884661,
      ),
      <class 'tuple'> (
        47.41313068366956,
        73.8399992468396,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        46.5396803500049,
        78.793582244491,
      ),
      <class 'tuple'> (
        60.29744465958545,
        81.21944728649802,
      ),
      <class 'tuple'> (
        57.87157961757843,
        94.97721159607858,
      ),
      <class 'tuple'> (
        44.11381530799788,
        92.55134655407156,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        76.01721467258653,
        21.03481693340578,
      ),
      <class 'tuple'> (
        89.77497898216707,
        23.460681975412793,
      ),
      <class 'tuple'> (
        87.34911394016005,
        37.21844628499334,
      ),
      <class 'tuple'> (
        73.59134963057951,
        34.79258124298633,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        72.71789929691487,
        39.74616424063773,
      ),
      <class 'tuple'> (
        86.4756636064954,
        42.17202928264474,
      ),
      <class 'tuple'> (
        84.04979856448838,
        55.929793592225295,
      ),
      <class 'tuple'> (
        70.29203425490785,
        53.503928550218276,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        69.41858392124318,
        58.457511547869686,
      ),
      <class 'tuple'> (
        83.17634823082372,
        60.8833765898767,
      ),
      <class 'tuple'> (
        80.7504831888167,
        74.64114089945724,
      ),
      <class 'tuple'> (
        66.99271887923616,
        72.21527585745022,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        66.11926854557152,
        77.16885885510163,
      ),
      <class 'tuple'> (
        79.87703285515204,
        79.59472389710865,
      ),
      <class 'tuple'> (
        77.45116781314503,
        93.3524882066892,
      ),
      <class 'tuple'> (
        63.69340350356449,
        90.92662316468218,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        95.24950651281928,
        21.37970905004083,
      ),
      <class 'tuple'> (
        109.00727082239983,
        23.80557409204785,
      ),
      <class 'tuple'> (
        106.58140578039281,
        37.56333840162839,
      ),
      <class 'tuple'> (
        92.82364147081226,
        35.137473359621374,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        91.9501911371476,
        40.091056357272784,
      ),
      <class 'tuple'> (
        105.70795544672815,
        42.5169213992798,
      ),
      <class 'tuple'> (
        103.28209040472113,
        56.274685708860346,
      ),
      <class 'tuple'> (
        89.52432609514058,
        53.84882066685333,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        88.65087576147592,
        58.80240366450474,
      ),
      <class 'tuple'> (
        102.40864007105647,
        61.228268706511756,
      ),
      <class 'tuple'> (
        99.98277502904946,
        74.98603301609229,
      ),
      <class 'tuple'> (
        86.22501071946891,
        72.56016797408527,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        85.35156038580425,
        77.51375097173668,
      ),
      <class 'tuple'> (
        99.1093246953848,
        79.9396160137437,
      ),
      <class 'tuple'> (
        96.68345965337778,
        93.69738032332425,
      ),
      <class 'tuple'> (
        82.92569534379723,
        91.27151528131724,
      ),
    ],
  ]
---
# name: test_geometry[atreus_42-switch_outline]
  <class 'list'> [
    <class 'tuple'> (
      -1.013348409506895,
      2.867599170203159,
    ),
    <class 'tuple'> (
      17.697998897725057,
      6.166914545874835,
    ),
    <class 'tuple'> (
      18.479415697226244,
      1.735279657319899,
    ),
    <class 'tuple'> (
      38.1755707574704,
      5.208243210658506,
    ),
    <class 'tuple'> (
      37.307329869135756,
      10.132281975719547,
    ),
    <class 'tuple'> (
      56.01867717636771,
      13.431597351391222,
    ),
    <class 'tuple'> (
      54.97678811036612,
      19.340443869464472,
    ),
    <class 'tuple'> (
      72.70332766458587,
      22.466111067469217,
    ),
    <class 'tuple'> (
      73.57156855292052,
      17.542072302408176,
    ),
    <class 'tuple'> (
      92.28291586015247,
      20.84138767807985,
    ),
    <class 'tuple'> (
      92.80386039315326,
      17.886964419043228,
    ),
    <class 'tuple'> (
      112.50001545339742,
      21.359927972381836,
    ),
    <class 'tuple'> (
      99.12910577304379,
      97.19012495432185,
    ),
    <class 'tuple'> (
      80.41775846581183,
      93.89080957865018,
    ),
    <class 'tuple'> (
      79.89681393281104,
      96.84523283768681,
    ),
    <class 'tuple'> (
      61.185466625579096,
      93.54591746201513,
    ),
    <class 'tuple'> (
      60.31722573724444,
      98.46995622707617,
    ),
    <class 'tuple'> (
      40.621070677000276,
      94.99699267373757,
    ),
    <class 'tuple'> (
      41.66295974300186,
      89.0881461556643,
    ),
    <class 'tuple'> (
      22.951612435769906,
      85.78883077999262,
    ),
    <class 'tuple'> (
      23.819853324104557,
      80.8647920149316,
    ),
    <class 'tuple'> (
      5.108506016872607,
      77.56547663925993,
    ),
    <class 'tuple'> (
      12.488553567717148,
      35.711147136241074,
    ),
    <class 'tuple'> (
      -6.222793739514804,
      32.4118317605694,
    ),
  ]
---
# name: test_geometry[atreus_42-thickness]
  3
---
# name: test_geometry[atreus_44-case_outer]
  <class 'list'> [
    <class 'tuple'> (
      -7.782154374963838,
      -14.647761228459936,
    ),
    <class 'tuple'> (
      7.0078869702053215,
      -14.647761228459936,
    ),
    <class 'tuple'> (
      128.88305633917724,
      9.888399245360908,
    ),
    <class 'tuple'> (
      110.60063450006471,
      113.57316584010168,
    ),
    <class 'tuple'> (
      -7.782154374963838,
      113.57316584010168,
    ),
  ]
---
# name: test_geometry[atreus_44-mirror_base_point]
  <class 'tuple'> (
    -7.282154374963838,
    41.255405382619024,
  )
---
# name: test_geometry[atreus_44-reset_button]
  <class 'tuple'> (
    -30,
    101,
  )
---
# name: test_geometry[atreus_44-screws]
  <class 'list'> [
    <class 'tuple'> (
      5.5,
      104.52153575070832,
    ),
    <class 'tuple'> (
      104.26261487838565,
      104.52153575070832,
    ),
    <class 'tuple'> (
      119.83142624978389,
      16.22641886703997,
    ),
    <class 'tuple'> (
      13.345906591884383,
      -5.5961311390665776,
    ),
  ]
---
# name: test_geometry[atreus_44-spacer]
  <class 'list'> [
    <class 'tuple'> (
      -7.782154374963838,
      -14.647761228459936,
    ),
    <class 'tuple'> (
      -7.782154374963838,
      1.7352796573198983,
    ),
    <class 'tuple'> (
      18.479415697226244,
      1.7352796573198983,
    ),
    <class 'tuple'> (
      112.50001545339741,
      21.359927972381836,
    ),
    <class 'tuple'> (
      99.12910577304379,
      97.19012495432185,
    ),
    <class 'tuple'> (
      -5.782154374963838,
      97.19012495432185,
    ),
    <class 'tuple'> (
      -5.782154374963838,
      113.57316584010168,
    ),
    <class 'tuple'> (
      110.60063450006471,
      113.57316584010168,
    ),
    <class 'tuple'> (
      128.88305633917724,
      9.888399245360908,
    ),
    <class 'tuple'> (
      7.0078869702053215,
      -14.647761228459936,
    ),
  ]
---
# name: test_geometry[atreus_44-spacer_thickness]
  3
---
# name: test_geometry[atreus_44-switch_cutouts]
  <class 'list'> [
    <class 'list'> [
      <class 'tuple'> (
        1.3489465848789903,
        6.83305152264662,
      ),
      <class 'tuple'> (
        15.106710894459535,
        9.258916564653637,
      ),
      <class 'tuple'> (
        12.68084585245252,
        23.016680874234183,
      ),
      <class 'tuple'> (
        -1.0769184571280261,
        20.590815832227165,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        -1.9503687907926857,
        25.54439882987857,
      ),
      <class 'tuple'> (
        11.80739551878786,
        27.97026387188559,
      ),
      <class 'tuple'> (
        9.381530476780844,
        41.72802818146613,
      ),
      <class 'tuple'> (
        -4.376233832799702,
        39.30216313945912,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        20.925061816892256,
        5.228024288317501,
      ),
      <class 'tuple'> (
        34.682826126472804,
        7.6538893303245175,
      ),
      <class 'tuple'> (
        32.256961084465786,
        21.41165363990506,
      ),
      <class 'tuple'> (
        18.499196774885238,
        18.985788597898047,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        17.625746441220578,
        23.939371595549456,
      ),
      <class 'tuple'> (
        31.383510750801126,
        26.36523663755647,
      ),
      <class 'tuple'> (
        28.95764570879411,
        40.123000947137015,
      ),
      <class 'tuple'> (
        15.199881399213563,
        37.69713590513,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        14.326431065548903,
        42.650718902781406,
      ),
      <class 'tuple'> (
        28.08419537512945,
        45.076583944788425,
      ),
      <class 'tuple'> (
        25.658330333122436,
        58.83434825436897,
      ),
      <class 'tuple'> (
        11.900566023541886,
        56.40848321236195,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        11.027115689877226,
        61.36206621001336,
      ),
      <class 'tuple'> (
        24.78487999945777,
        63.78793125202038,
      ),
      <class 'tuple'> (
        22.359014957450757,
        77.54569556160092,
      ),
      <class 'tuple'> (
        8.60125064787021,
        75.1198305195939,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        38.76816823578956,
        13.451378429050216,
      ),
      <class 'tuple'> (
        52.525932545370104,
        15.877243471057234,
      ),
      <class 'tuple'> (
        50.100067503363086,
        29.63500778063778,
      ),
      <class 'tuple'> (
        36.34230319378254,
        27.209142738630764,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        35.468852860117885,
        32.16272573628217,
      ),
      <class 'tuple'> (
        49.22661716969843,
        34.58859077828919,
      ),
      <class 'tuple'> (
        46.80075212769141,
        48.34635508786973,
      ),
      <class 'tuple'> (
        33.042987818110866,
        45.920490045862714,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        32.16953748444621,
        50.87407304351412,
      ),
      <class 'tuple'> (
        45.927301794026754,
        53.29993808552114,
      ),
      <class 'tuple'> (
        43.501436752019735,
        67.05770239510169,
      ),
      <class 'tuple'> (
        29.74367244243919,
        64.63183735309467,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        28.870222108774534,
        69.58542035074608,
      ),
      <class 'tuple'> (
        42.62798641835508,
        72.0112853927531,
      ),
      <class 'tuple'> (
        40.20212137634806,
        85.76904970233363,
      ),
      <class 'tuple'> (
        26.444357066767516,
        83.34318466032661,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        56.437626477019926,
        22.659540322795145,
      ),
      <class 'tuple'> (
        70.19539078660047,
        25.08540536480216,
      ),
      <class 'tuple'> (
        67.76952574459347,
        38.84316967438271,
      ),
      <class 'tuple'> (
        54.01176143501291,
        36.41730463237569,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        53.13831110134825,
        41.3708876300271,
      ),
      <class 'tuple'> (
        66.8960754109288,
        43.79675267203412,
      ),
      <class 'tuple'> (
        64.47021036892178,
        57.554516981614654,
      ),
      <class 'tuple'> (
        50.71244605934123,
        55.128651939607636,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        49.83899572567657,
        60.082234937259045,
      ),
      <class 'tuple'> (
        63.59676003525712,
        62.50809997926606,
      ),
      <class 'tuple'> (
        61.17089499325011,
        76.26586428884661,
      ),
      <class 'tuple'> (
        47.41313068366956,
        73.8399992468396,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        46.5396803500049,
        78.793582244491,
      ),
      <class 'tuple'> (
        60.29744465958545,
        81.21944728649802,
      ),
      <class 'tuple'> (
        57.87157961757843,
        94.97721159607858,
      ),
      <class 'tuple'> (
        44.11381530799788,
        92.55134655407156,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        76.01721467258653,
        21.03481693340578,
      ),
      <class 'tuple'> (
        89.77497898216707,
        23.460681975412793,
      ),
      <class 'tuple'> (
        87.34911394016005,
        37.21844628499334,
      ),
      <class 'tuple'> (
        73.59134963057951,
        34.79258124298633,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        72.71789929691487,
        39.74616424063773,
      ),
      <class 'tuple'> (
        86.4756636064954,
        42.17202928264474,
      ),
      <class 'tuple'> (
        84.04979856448838,
        55.929793592225295,
      ),
      <class 'tuple'> (
        70.29203425490785,
        53.503928550218276,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        69.41858392124318,
        58.457511547869686,
      ),
      <class 'tuple'> (
        83.17634823082372,
        60.8833765898767,
      ),
      <class 'tuple'> (
        80.7504831888167,
        74.64114089945724,
      ),
      <class 'tuple'> (
        66.99271887923616,
        72.21527585745022,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        66.11926854557152,
        77.16885885510163,
      ),
      <class 'tuple'> (
        79.87703285515204,
        79.59472389710865,
      ),
      <class 'tuple'> (
        77.45116781314503,
        93.3524882066892,
      ),
      <class 'tuple'> (
        63.69340350356449,
        90.92662316468218,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        95.24950651281928,
        21.37970905004083,
      ),
      <class 'tuple'> (
        109.00727082239983,
        23.80557409204785,
      ),
      <class 'tuple'> (
        106.58140578039281,
        37.56333840162839,
      ),
      <class 'tuple'> (
        92.82364147081226,
        35.137473359621374,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        91.9501911371476,
        40.091056357272784,
      ),
      <class 'tuple'> (
        105.70795544672815,
        42.5169213992798,
      ),
      <class 'tuple'> (
        103.28209040472113,
        56.274685708860346,
      ),
      <class 'tuple'> (
        89.52432609514058,
        53.84882066685333,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        88.65087576147592,
        58.80240366450474,
      ),
      <class 'tuple'> (
        102.40864007105647,
        61.228268706511756,
      ),
      <class 'tuple'> (
        99.98277502904946,
        74.98603301609229,
      ),
      <class 'tuple'> (
        86.22501071946891,
        72.56016797408527,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        85.35156038580425,
        77.51375097173668,
      ),
      <class 'tuple'> (
        99.1093246953848,
        79.9396160137437,
      ),
      <class 'tuple'> (
        96.68345965337778,
        93.69738032332425,
      ),
      <class 'tuple'> (
        82.92569534379723,
        91.27151528131724,
      ),
    ],
  ]
---
# name: test_geometry[atreus_44-switch_outline]
  <class 'list'> [
    <class 'tuple'> (
      -1.183523623620487,
      3.832710768155123,
    ),
    <class 'tuple'> (
      17.527823683611466,
      7.132026143826799,
    ),
    <class 'tuple'> (
      18.479415697226244,
      1.735279657319899,
    ),
    <class 'tuple'> (
      38.1755707574704,
      5.208243210658506,
    ),
    <class 'tuple'> (
      37.307329869135756,
      10.132281975719547,
    ),
    <class 'tuple'> (
      56.01867717636771,
      13.431597351391222,
    ),
    <class 'tuple'> (
      54.97678811036612,
      19.340443869464472,
    ),
    <class 'tuple'> (
      72.70332766458587,
      22.466111067469217,
    ),
    <class 'tuple'> (
      73.57156855292052,
      17.542072302408176,
    ),
    <class 'tuple'> (
      92.28291586015247,
      20.84138767807985,
    ),
    <class 'tuple'> (
      92.80386039315326,
      17.886964419043228,
    ),
    <class 'tuple'> (
      112.50001545339742,
      21.359927972381836,
    ),
    <class 'tuple'> (
      99.12910577304379,
      97.19012495432185,
    ),
    <class 'tuple'> (
      80.41775846581183,
      93.89080957865018,
    ),
    <class 'tuple'> (
      79.89681393281104,
      96.84523283768681,
    ),
    <class 'tuple'> (
      61.185466625579096,
      93.54591746201513,
    ),
    <class 'tuple'> (
      60.31722573724444,
      98.46995622707617,
    ),
    <class 'tuple'> (
      40.621070677000276,
      94.99699267373757,
    ),
    <class 'tuple'> (
      41.66295974300186,
      89.0881461556643,
    ),
    <class 'tuple'> (
      22.951612435769906,
      85.78883077999262,
    ),
    <class 'tuple'> (
      23.819853324104557,
      80.8647920149316,
    ),
    <class 'tuple'> (
      5.108506016872607,
      77.56547663925993,
    ),
    <class 'tuple'> (
      10.929192932268112,
      44.5547207582907,
    ),
    <class 'tuple'> (
      -7.782154374963838,
      41.255405382619024,
    ),
  ]
---
# name: test_geometry[atreus_44-thickness]
  3
---
# name: test_geometry[atreus_62-case_outer]
  <class 'list'> [
    <class 'tuple'> (
      -6.222793739514804,
      -14.647761228459936,
    ),
    <class 'tuple'> (
      7.0078869702053215,
      -14.647761228459936,
    ),
    <class 'tuple'> (
      147.5944036464092,
      13.187714621032583,
    ),
    <class 'tuple'> (
      126.012666431625,
      135.5838285230053,
    ),
    <class 'tuple'> (
      -6.222793739514804,
      135.5838285230053,
    ),
  ]
---
# name: test_geometry[atreus_62-mirror_base_point]
  <class 'tuple'> (
    -5.722793739514804,
    32.4118317605694,
  )
---
# name: test_geometry[atreus_62-reset_button]
  <class 'tuple'> (
    -30,
    101,
  )
---
# name: test_geometry[atreus_62-screws]
  <class 'list'> [
    <class 'tuple'> (
      5.5,
      126.53219843361195,
    ),
    <class 'tuple'> (
      119.67464680994593,
      126.53219843361195,
    ),
    <class 'tuple'> (
      138.54277355701586,
      19.525734242711646,
    ),
    <class 'tuple'> (
      13.345906591884383,
      -5.5961311390665776,
    ),
  ]
---
# name: test_geometry[atreus_62-spacer]
  <class 'list'> [
    <class 'tuple'> (
      -6.222793739514804,
      -14.647761228459936,
    ),
    <class 'tuple'> (
      -6.222793739514804,
      1.7352796573198983,
    ),
    <class 'tuple'> (
      18.479415697226244,
      1.7352796573198983,
    ),
    <class 'tuple'> (
      131.21136276062938,
      24.65924334805351,
    ),
    <class 'tuple'> (
      114.54113770460407,
      119.20078763722547,
    ),
    <class 'tuple'> (
      -4.222793739514804,
      119.20078763722547,
    ),
    <class 'tuple'> (
      -4.222793739514804,
      135.5838285230053,
    ),
    <class 'tuple'> (
      126.012666431625,
      135.5838285230053,
    ),
    <class 'tuple'> (
      147.5944036464092,
      13.187714621032583,
    ),
    <class 'tuple'> (
      7.0078869702053215,
      -14.647761228459936,
    ),
  ]
---
# name: test_geometry[atreus_62-spacer_thickness]
  3
---
# name: test_geometry[atreus_62-switch_cutouts]
  <class 'list'> [
    <class 'list'> [
      <class 'tuple'> (
        0.5640568218244653,
        11.284382566261803,
      ),
      <class 'tuple'> (
        14.321821131405011,
        13.71024760826882,
      ),
      <class 'tuple'> (
        11.895956089397995,
        27.468011917849363,
      ),
      <class 'tuple'> (
        -1.8618082201825512,
        25.042146875842345,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        20.925061816892256,
        5.228024288317501,
      ),
      <class 'tuple'> (
        34.682826126472804,
        7.6538893303245175,
      ),
      <class 'tuple'> (
        32.256961084465786,
        21.41165363990506,
      ),
      <class 'tuple'> (
        18.499196774885238,
        18.985788597898047,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        17.625746441220578,
        23.939371595549456,
      ),
      <class 'tuple'> (
        31.383510750801126,
        26.36523663755647,
      ),
      <class 'tuple'> (
        28.95764570879411,
        40.123000947137015,
      ),
      <class 'tuple'> (
        15.199881399213563,
        37.69713590513,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        14.326431065548903,
        42.650718902781406,
      ),
      <class 'tuple'> (
        28.08419537512945,
        45.076583944788425,
      ),
      <class 'tuple'> (
        25.658330333122436,
        58.83434825436897,
      ),
      <class 'tuple'> (
        11.900566023541886,
        56.40848321236195,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        11.027115689877226,
        61.36206621001336,
      ),
      <class 'tuple'> (
        24.78487999945777,
        63.78793125202038,
      ),
      <class 'tuple'> (
        22.359014957450757,
        77.54569556160092,
      ),
      <class 'tuple'> (
        8.60125064787021,
        75.1198305195939,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        7.727800314205551,
        80.0734135172453,
      ),
      <class 'tuple'> (
        21.485564623786097,
        82.49927855925232,
      ),
      <class 'tuple'> (
        19.059699581779082,
        96.25704286883287,
      ),
      <class 'tuple'> (
        5.301935272198534,
        93.83117782682585,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        38.76816823578956,
        13.451378429050216,
      ),
      <class 'tuple'> (
        52.525932545370104,
        15.877243471057234,
      ),
      <class 'tuple'> (
        50.100067503363086,
        29.63500778063778,
      ),
      <class 'tuple'> (
        36.34230319378254,
        27.209142738630764,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        35.468852860117885,
        32.16272573628217,
      ),
      <class 'tuple'> (
        49.22661716969843,
        34.58859077828919,
      ),
      <class 'tuple'> (
        46.80075212769141,
        48.34635508786973,
      ),
      <class 'tuple'> (
        33.042987818110866,
        45.920490045862714,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        32.16953748444621,
        50.87407304351412,
      ),
      <class 'tuple'> (
        45.927301794026754,
        53.29993808552114,
      ),
      <class 'tuple'> (
        43.501436752019735,
        67.05770239510169,
      ),
      <class 'tuple'> (
        29.74367244243919,
        64.63183735309467,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        28.870222108774534,
        69.58542035074608,
      ),
      <class 'tuple'> (
        42.62798641835508,
        72.0112853927531,
      ),
      <class 'tuple'> (
        40.20212137634806,
        85.76904970233363,
      ),
      <class 'tuple'> (
        26.444357066767516,
        83.34318466032661,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        25.570906733102856,
        88.29676765797802,
      ),
      <class 'tuple'> (
        39.328671042683396,
        90.72263269998504,
      ),
      <class 'tuple'> (
        36.90280600067638,
        104.48039700956559,
      ),
      <class 'tuple'> (
        23.145041691095837,
        102.05453196755857,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        56.437626477019926,
        22.659540322795145,
      ),
      <class 'tuple'> (
        70.19539078660047,
        25.08540536480216,
      ),
      <class 'tuple'> (
        67.76952574459347,
        38.84316967438271,
      ),
      <class 'tuple'> (
        54.01176143501291,
        36.41730463237569,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        53.13831110134825,
        41.3708876300271,
      ),
      <class 'tuple'> (
        66.8960754109288,
        43.79675267203412,
      ),
      <class 'tuple'> (
        64.47021036892178,
        57.554516981614654,
      ),
      <class 'tuple'> (
        50.71244605934123,
        55.128651939607636,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        49.83899572567657,
        60.082234937259045,
      ),
      <class 'tuple'> (
        63.59676003525712,
        62.50809997926606,
      ),
      <class 'tuple'> (
        61.17089499325011,
        76.26586428884661,
      ),
      <class 'tuple'> (
        47.41313068366956,
        73.8399992468396,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        46.5396803500049,
        78.793582244491,
      ),
      <class 'tuple'> (
        60.29744465958545,
        81.21944728649802,
      ),
      <class 'tuple'> (
        57.87157961757843,
        94.97721159607858,
      ),
      <class 'tuple'> (
        44.11381530799788,
        92.55134655407156,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        43.24036497433322,
        97.50492955172295,
      ),
      <class 'tuple'> (
        56.99812928391377,
        99.93079459372996,
      ),
      <class 'tuple'> (
        54.57226424190675,
        113.68855890331051,
      ),
      <class 'tuple'> (
        40.8144999323262,
        111.2626938613035,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        76.01721467258653,
        21.03481693340578,
      ),
      <class 'tuple'> (
        89.77497898216707,
        23.460681975412793,
      ),
      <class 'tuple'> (
        87.34911394016005,
        37.21844628499334,
      ),
      <class 'tuple'> (
        73.59134963057951,
        34.79258124298633,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        72.71789929691487,
        39.74616424063773,
      ),
      <class 'tuple'> (
        86.4756636064954,
        42.17202928264474,
      ),
      <class 'tuple'> (
        84.04979856448838,
        55.929793592225295,
      ),
      <class 'tuple'> (
        70.29203425490785,
        53.503928550218276,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        69.41858392124318,
        58.457511547869686,
      ),
      <class 'tuple'> (
        83.17634823082372,
        60.8833765898767,
      ),
      <class 'tuple'> (
        80.7504831888167,
        74.64114089945724,
      ),
      <class 'tuple'> (
        66.99271887923616,
        72.21527585745022,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        66.11926854557152,
        77.16885885510163,
      ),
      <class 'tuple'> (
        79.87703285515204,
        79.59472389710865,
      ),
      <class 'tuple'> (
        77.45116781314503,
        93.3524882066892,
      ),
      <class 'tuple'> (
        63.69340350356449,
        90.92662316468218,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        62.81995316989983,
        95.88020616233358,
      ),
      <class 'tuple'> (
        76.57771747948037,
        98.3060712043406,
      ),
      <class 'tuple'> (
        74.15185243747335,
        112.06383551392115,
      ),
      <class 'tuple'> (
        60.394088127892815,
        109.63797047191413,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        95.24950651281928,
        21.37970905004083,
      ),
      <class 'tuple'> (
        109.00727082239983,
        23.80557409204785,
      ),
      <class 'tuple'> (
        106.58140578039281,
        37.56333840162839,
      ),
      <class 'tuple'> (
        92.82364147081226,
        35.137473359621374,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        91.9501911371476,
        40.091056357272784,
      ),
      <class 'tuple'> (
        105.70795544672815,
        42.5169213992798,
      ),
      <class 'tuple'> (
        103.28209040472113,
        56.274685708860346,
      ),
      <class 'tuple'> (
        89.52432609514058,
        53.84882066685333,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        88.65087576147592,
        58.80240366450474,
      ),
      <class 'tuple'> (
        102.40864007105647,
        61.228268706511756,
      ),
      <class 'tuple'> (
        99.98277502904946,
        74.98603301609229,
      ),
      <class 'tuple'> (
        86.22501071946891,
        72.56016797408527,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        85.35156038580425,
        77.51375097173668,
      ),
      <class 'tuple'> (
        99.1093246953848,
        79.9396160137437,
      ),
      <class 'tuple'> (
        96.68345965337778,
        93.69738032332425,
      ),
      <class 'tuple'> (
        82.92569534379723,
        91.27151528131724,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        82.05224501013257,
        96.22509827896864,
      ),
      <class 'tuple'> (
        95.81000931971312,
        98.65096332097566,
      ),
      <class 'tuple'> (
        93.3841442777061,
        112.4087276305562,
      ),
      <class 'tuple'> (
        79.62637996812555,
        109.98286258854918,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        113.96085382005123,
        24.679024425712505,
      ),
      <class 'tuple'> (
        127.71861812963179,
        27.104889467719527,
      ),
      <class 'tuple'> (
        125.29275308762477,
        40.86265377730007,
      ),
      <class 'tuple'> (
        111.53498877804421,
        38.43678873529305,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        110.66153844437954,
        43.39037173294446,
      ),
      <class 'tuple'> (
        124.41930275396011,
        45.81623677495148,
      ),
      <class 'tuple'> (
        121.99343771195309,
        59.57400108453203,
      ),
      <class 'tuple'> (
        108.23567340237253,
        57.14813604252501,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        107.36222306870786,
        62.101719040176405,
      ),
      <class 'tuple'> (
        121.11998737828843,
        64.52758408218344,
      ),
      <class 'tuple'> (
        118.69412233628142,
        78.28534839176397,
      ),
      <class 'tuple'> (
        104.93635802670086,
        75.85948334975696,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        104.0629076930362,
        80.81306634740837,
      ),
      <class 'tuple'> (
        117.82067200261676,
        83.23893138941538,
      ),
      <class 'tuple'> (
        115.39480696060974,
        96.99669569899592,
      ),
      <class 'tuple'> (
        101.63704265102918,
        94.5708306569889,
      ),
    ],
    <class 'list'> [
      <class 'tuple'> (
        100.76359231736451,
        99.52441365464031,
      ),
      <class 'tuple'> (
        114.52135662694508,
        101.95027869664733,
      ),
      <class 'tuple'> (
        112.09549158493806,
        115.70804300622788,
      ),
      <class 'tuple'> (
        98.33772727535751,
        113.28217796422085,
      ),
    ],
  ]
---
# name: test_geometry[atreus_62-switch_outline]
  <class 'list'> [
    <class 'tuple'> (
      -1.013348409506895,
      2.867599170203159,
    ),
    <class 'tuple'> (
      17.697998897725057,
      6.166914545874835,
    ),
    <class 'tuple'> (
      18.479415697226244,
      1.735279657319899,
    ),
    <class 'tuple'> (
      38.1755707574704,
      5.208243210658506,
    ),
    <class 'tuple'> (
      37.307329869135756,
      10.132281975719547,
    ),
    <class 'tuple'> (
      56.01867717636771,
      13.431597351391222,
    ),
    <class 'tuple'> (
      54.97678811036612,
      19.340443869464472,
    ),
    <class 'tuple'> (
      72.70332766458587,
      22.466111067469217,
    ),
    <class 'tuple'> (
      73.57156855292052,
      17.542072302408176,
    ),
    <class 'tuple'> (
      92.28291586015247,
      20.84138767807985,
    ),
    <class 'tuple'> (
      92.80386039315326,
      17.886964419043228,
    ),
    <class 'tuple'> (
      131.21136276062938,
      24.65924334805351,
    ),
    <class 'tuple'> (
      114.54113770460407,
      119.20078763722549,
    ),
    <class 'tuple'> (
      77.11844309014016,
      112.60215688588214,
    ),
    <class 'tuple'> (
      76.59749855713936,
      115.55658014491875,
    ),
    <class 'tuple'> (
      57.886151249907414,
      112.25726476924707,
    ),
    <class 'tuple'> (
      57.01791036157277,
      117.18130353430811,
    ),
    <class 'tuple'> (
      37.3217553013286,
      113.70833998096951,
    ),
    <class 'tuple'> (
      38.36364436733018,
      107.79949346289627,
    ),
    <class 'tuple'> (
      19.65229706009823,
      104.50017808722458,
    ),
    <class 'tuple'> (
      20.52053794843288,
      99.57613932216354,
    ),
    <class 'tuple'> (
      1.8091906412009315,
      96.27682394649187,
    ),
    <class 'tuple'> (
      12.488553567717148,
      35.711147136241074,
    ),
    <class 'tuple'> (
      -6.222793739514804,
      32.4118317605694,
    ),
  ]
---
# name: test_geometry[atreus_62-thickness]
  3
---
